Remove Tailwind, Install Bootstrap

--- a/src/sections/styleguide.liquid
+++ b/src/sections/styleguide.liquid
@@ -60,13 +60,17 @@
                         <input type="checkbox" class="code-switch custom-control-input" id="codeSwitch-buttons">
                         <label class="custom-control-label" for="codeSwitch-buttons">View Code</label>
                     </div>
+                    <div class="form-check form-switch">
+                      <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                      <label class="form-check-label" for="flexSwitchCheckDefault">Default switch checkbox input</label>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="guide-block-body row">
             <div class="col-12">
                 {% render 'styleguide-buttons' %}
-                <pre class="prose prose-slate prose-xl"><xmp>{% render 'styleguide-buttons' %}</xmp></pre>
+                <pre class="prettyprint"><xmp>{% render 'styleguide-buttons' %}</xmp></pre>
             </div>
         </div>
     </section>
