--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -34,6 +34,8 @@
     {%- if settings.animations_reveal_on_scroll -%}
       <script src="{{ 'animations.js' | asset_url }}" defer="defer"></script>
     {%- endif -%}
+    {% comment %} Custom JS added on top of base theme {% endcomment %}
+    <script src="{{ 'app.js' | asset_url }}" defer="defer"></script>
 
     {{ content_for_header }}
 
